@@ -215,3 +215,7 @@ Thursday 17 December 2009 (07:01:18 PM)
 Thursday 17 December 2009 (09:24:07 PM)
     - global time step update component.
     - bug in computing speed of sound parallely rectified.
+Friday 18 December 2009 (05:41:06 PM)
+    - bug in computing adjacent remote cells resolved.
+    - force update of parallel cell manager along with update status.
+    - time step component does not compute sigms for dummy particles.
